Review Request 4997 -further prevented overlap of model name -added ellipsis and max-width to user menu, and tooltips

--- a/le-ui/projects/common/assets/sass/_navigation.scss
+++ b/le-ui/projects/common/assets/sass/_navigation.scss
@@ -395,7 +395,7 @@ html.no-cssmask {
         /*font-family: 'ProximaNova-Bold','Open Sans',sans-serif;*/
         color: #333;
         font-size: 22px;
-        margin-top: 18px;
+        margin-top: 17px;
         margin-left: .5em;
         vertical-align: middle;
         transition: none;
@@ -408,15 +408,20 @@ html.no-cssmask {
         background-color: #e5e5e5;
         span {
             background-color: #222;
+            -webkit-transition: all 250ms linear, transform 0s linear;
+            -moz-transition: all 250ms linear, transform 0s linear;
+            -ms-transition: all 250ms linear, transform 0s linear;
+            transition: all 250ms linear, transform 0s linear;
         }
     }
     .model-name {
         position: absolute;
+        left: 3em;
+        right: 260px;
+        margin-top: 18px;
         text-overflow: ellipsis;
         white-space: nowrap;
         overflow: hidden;
-        left: 3em;
-        right: 9em;
     }
     .header-tenant-name {
         padding: 20px 20px 20px 52px;
@@ -432,6 +437,7 @@ html.no-cssmask {
     }
     .profile-nav {
         float: right;
+        max-width: 250px;
         & > a {
             padding: 16px 20px 16px 20px;
             display: block;
@@ -459,6 +465,8 @@ html.no-cssmask {
             }
             img, & > div, span {
                 float: left;
+                width: 11em;
+                overflow: hidden;
             }
             img {
                 width: 30px;
@@ -466,16 +474,21 @@ html.no-cssmask {
                 margin: 4px 10px 0 0;
             }
             span {
-                margin: 15px 0 0 19px;
+                margin: 1em 0 0 1em;
+                width: 1em;
             }
             .pd-header-username {
                 font-family: 'ProximaNova-Semibold','Open Sans',sans-serif;
                 font-size: 14px;
+                text-overflow: ellipsis;
+                overflow: hidden;
             }            
             .tenant-name {
                 font-family: 'ProximaNova-Regular','Open Sans',sans-serif;
                 font-size: 12px;
                 margin-top: -4px;
+                text-overflow: ellipsis;
+                overflow: hidden;
             }
             .pd-header-downarrow {
                 margin-left: 10px;
